<resources>
    <string name="app_name">Homework1Secondtry</string>
    <string name="current_temp">°F</string>
    <string name="current_humid">%</string>
    <string name="current_wind">mph</string>
    <string name="current_precip">%</string>
    <string name="btn_enter">Submit</string>
    <string name="humidity">Humidity</string>
    <string name="precip">Chance of Rain</string>
    <string name="wind">Wind Speed</string>

</resources>
